bk_ida/gccida/c0/record_one_set
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_one_set/src/gcse.c:1696:31: error: expected expression
reg_set_table = ( reg_set_0 **)grealloc( ( char *)reg_set_table, 8 * ( regno + 100)); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_one_set/src/gcse.c:1696:19: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_table = ( reg_set_0 **)grealloc( ( char *)reg_set_table, 8 * ( regno + 100)); 
                  ^~~~~~~~~
                  reg_set_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_one_set/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_one_set/src/gcse.c:1714:37: error: expected expression
reg_set_table[regno] = ( reg_set_0 *)value; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_one_set/src/gcse.c:1714:26: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_table[regno] = ( reg_set_0 *)value; 
                         ^~~~~~~~~
                         reg_set_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_one_set/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/record_one_set/src/obj/gcse.o] Error 1
